@@ -1,5 +1,6 @@
 2021-09-27 Danilo Chang
 
+	* Implement command: createHanningWindow, phaseCorrelate
 	* Implement command: setRNGSeed, randShuffle
 	* Implement command: warpPolar
 
